<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="sopt.sopkathon.weing.presentation.ranking.RankingViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ranking.RankingActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_ranking_rank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_ranking_border_bottom_24dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_ranking_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="36dp"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_ranking_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="@+id/tv_ranking_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_ranking_title" />

            <ImageView
                android:id="@+id/iv_ranking_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/thumb_up"
                app:layout_constraintBottom_toBottomOf="@+id/tv_ranking_title"
                app:layout_constraintStart_toEndOf="@+id/tv_ranking_title"
                app:layout_constraintTop_toTopOf="@+id/tv_ranking_title" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_ranking_first"
                android:layout_width="80dp"
                android:layout_height="112dp"
                android:layout_marginTop="49dp"
                android:layout_marginBottom="26dp"
                android:background="@drawable/rectangle_ranking_border_5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cl_ranking_third"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cl_ranking_second"
                app:layout_constraintTop_toBottomOf="@+id/tv_ranking_description">

                <ImageView
                    android:id="@+id/iv_ranking_first"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/thumb_up" />

                <TextView
                    android:id="@+id/tv_ranking_first_good_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@{String.valueOf(viewModel.topRank[0].likeCount)}"
                    android:textSize="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_ranking_first_good"
                    tools:text="100" />

                <TextView
                    android:id="@+id/tv_ranking_first_bad_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@{String.valueOf(viewModel.topRank[0].dislikeCount)}"
                    android:textSize="6dp"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_ranking_first_bad"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/iv_ranking_first_bad"
                    tools:text="100" />

                <ImageView
                    android:id="@+id/iv_ranking_first_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_ranking_first_good_count"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_ranking_first_good_count"
                    app:srcCompat="@drawable/thumb_up" />

                <ImageView
                    android:id="@+id/iv_ranking_first_bad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_ranking_first_good"
                    app:layout_constraintEnd_toStartOf="@+id/tv_ranking_first_bad_count"
                    app:layout_constraintStart_toEndOf="@+id/tv_ranking_first_good_count"
                    app:layout_constraintTop_toTopOf="@+id/iv_ranking_first_good"
                    app:srcCompat="@drawable/thumb_up" />

                <TextView
                    android:id="@+id/tv_ranking_first_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@{viewModel.topRank[0].title}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_ranking_first"
                    tools:text="스프레이" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_ranking_second"
                android:layout_width="80dp"
                android:layout_height="112dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rectangle_ranking_border_5dp"
                app:layout_constraintBottom_toBottomOf="@+id/cl_ranking_first"
                app:layout_constraintEnd_toStartOf="@+id/cl_ranking_first"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/iv_ranking_second"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/thumb_up" />

                <TextView
                    android:id="@+id/tv_ranking_second_good_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@{String.valueOf(viewModel.topRank[1].likeCount)}"
                    android:textSize="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_ranking_second_good"
                    tools:text="100" />

                <TextView
                    android:id="@+id/tv_ranking_second_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@{viewModel.topRank[1].title}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_ranking_second"
                    tools:text="전기" />

                <ImageView
                    android:id="@+id/iv_ranking_second_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_ranking_second_good_count"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_ranking_second_good_count"
                    app:srcCompat="@drawable/thumb_up" />

                <ImageView
                    android:id="@+id/iv_ranking_second_bad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_ranking_second_good"
                    app:layout_constraintEnd_toStartOf="@+id/tv_ranking_second_bad_count"
                    app:layout_constraintStart_toEndOf="@+id/tv_ranking_second_good_count"
                    app:layout_constraintTop_toTopOf="@+id/iv_ranking_second_good"
                    app:srcCompat="@drawable/thumb_up" />

                <TextView
                    android:id="@+id/tv_ranking_second_bad_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@{String.valueOf(viewModel.topRank[1].dislikeCount)}"
                    android:textSize="6dp"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_ranking_second_bad"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/iv_ranking_second_bad"
                    tools:text="100" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_ranking_third"
                android:layout_width="80dp"
                android:layout_height="112dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="36dp"
                android:background="@drawable/rectangle_ranking_border_5dp"
                app:layout_constraintBottom_toBottomOf="@+id/cl_ranking_first"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cl_ranking_first">

                <ImageView
                    android:id="@+id/iv_ranking_third"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/thumb_up" />

                <TextView
                    android:id="@+id/tv_ranking_third_bad_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@{String.valueOf(viewModel.topRank[2].dislikeCount)}"
                    android:textSize="6dp"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_ranking_third_bad"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/iv_ranking_third_bad"
                    tools:text="100" />

                <TextView
                    android:id="@+id/tv_ranking_third_good_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@{String.valueOf(viewModel.topRank[2].likeCount)}"
                    android:textSize="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_ranking_third_good"
                    tools:text="100" />

                <ImageView
                    android:id="@+id/iv_ranking_third_bad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_ranking_third_good"
                    app:layout_constraintEnd_toStartOf="@+id/tv_ranking_third_bad_count"
                    app:layout_constraintStart_toEndOf="@+id/tv_ranking_third_good_count"
                    app:layout_constraintTop_toTopOf="@+id/iv_ranking_third_good"
                    app:srcCompat="@drawable/thumb_up" />

                <ImageView
                    android:id="@+id/iv_ranking_third_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_ranking_third_good_count"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_ranking_third_good_count"
                    app:srcCompat="@drawable/thumb_up" />

                <TextView
                    android:id="@+id/tv_ranking_third_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@{viewModel.topRank[2].title}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_ranking_third"
                    tools:text="물" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/tv_ranking_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/oval_ranking_rank"
                android:text="@string/tv_ranking_first"
                app:layout_constraintBottom_toTopOf="@+id/cl_ranking_first"
                app:layout_constraintStart_toStartOf="@+id/cl_ranking_first" />

            <TextView
                android:id="@+id/tv_ranking_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/oval_ranking_rank"
                android:text="@string/tv_ranking_second"
                app:layout_constraintBottom_toTopOf="@+id/cl_ranking_second"
                app:layout_constraintStart_toStartOf="@+id/cl_ranking_second" />


            <TextView
                android:id="@+id/tv_ranking_third"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/oval_ranking_rank"
                android:text="@string/tv_ranking_third"
                app:layout_constraintBottom_toTopOf="@+id/cl_ranking_third"
                app:layout_constraintStart_toStartOf="@+id/cl_ranking_third" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_ranking_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rectangle_ranking_border_11dp"
            android:text="@string/btn_ranking_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_ranking_rank"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_ranking_rank"
            tools:listitem="@layout/item_ranking" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>